# carts

./: .dekk.toml  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODEX.md  Makefile  README.md  environment.yml  lit.cfg.py
lib/arts/dialect/sde/Conversion/: CMakeLists.txt
lib/arts/dialect/sde/Conversion/OmpToSde/: ConvertOpenMPToSde.cpp
lib/arts/dialect/sde/Conversion/PolygeistToSde/: CMakeLists.txt  HandleDeps.cpp  Inliner.cpp  MemrefNormalization.cpp  PolygeistToSdeUtils.h
lib/carts/: CLAUDE.md  CMakeLists.txt
lib/carts/dialect/: CMakeLists.txt  README.md
lib/carts/dialect/arts/: README.md
lib/carts/dialect/arts-rt/: CMakeLists.txt  README.md
lib/carts/dialect/arts-rt/Analysis/: README.md
lib/carts/dialect/arts-rt/Conversion/: CMakeLists.txt  README.md
lib/carts/dialect/arts-rt/Conversion/ArtsRtToLLVM/: ArtsRtOpToLLVMPatterns.cpp  CMakeLists.txt  CodegenSupport.cpp  ConvertArtsRtToLLVM.cpp  ConvertArtsRtToLLVMInternal.h  ConvertArtsRtToLLVMPatterns.cpp
lib/carts/dialect/arts-rt/Conversion/ArtsToLLVM/: CMakeLists.txt  CodegenSupport.cpp  ConvertArtsToLLVM.cpp  ConvertArtsToLLVMPatterns.cpp
lib/carts/dialect/arts-rt/Conversion/ArtsToRt/: CMakeLists.txt  DbLayoutStrategy.cpp  DbLowering.cpp  EdtLowering.cpp  EdtLoweringInternal.h  EdtLoweringSupport.cpp  EpochLowering.cpp
lib/carts/dialect/arts-rt/Conversion/RtToLLVM/: CMakeLists.txt  RtToLLVMPatterns.cpp
lib/carts/dialect/arts-rt/IR/: CMakeLists.txt  README.md  RtDialect.cpp  RtOps.cpp
lib/carts/dialect/arts-rt/Transforms/: AliasScopeGen.cpp  CMakeLists.txt  DataPtrHoisting.cpp  DataPtrHoistingInternal.h  DataPtrHoistingSupport.cpp  GuidRangCallOpt.cpp  GuidRangeCallOpt.cpp  LoopVectorizationHints.cpp  LoweringContractCleanup.cpp  README.md  RuntimeCallOpt.cpp  ScalarReplacement.cpp  VerifyEpochLowered.cpp  VerifyLowered.cpp  VerifyPreLowered.cpp
lib/carts/dialect/arts-rt/Transforms/Verify/: VerifyDbLowered.cpp  VerifyEdtLowered.cpp
lib/carts/dialect/arts-rt/Utils/: CMakeLists.txt  IdRegistry.cpp  LoopInvarianceUtils.cpp  README.md  RtDbUtils.cpp
lib/carts/dialect/arts-rt/Verify/: README.md
lib/carts/dialect/arts-rt/test/: arts_to_llvm_lowers_affine_runtime_stride.mlir  arts_undef_lowered_in_arts_rt.mlir  data_ptr_hoisting_invariant_data_loads.mlir  db_lowering_preserves_plan_attrs.mlir  edt_lowering_owner_slice_plan_only_uses_ew.mlir  edt_lowering_rejects_unmaterialized_partial_reduction_split_plan.mlir  edt_param_pack_rejects_pointer_values.mlir  indexed_single_db_dep_uses_explicit_index.mlir  loop_vectorization_hints_no_forced_unroll.mlir  mixed_host_openmp_function_pointer_emission.mlir  no_core_cps_schema_after_pre_lowering.mlir  residual_db_ref_lowering.mlir  scalar_replacement_preserves_rank0_scratch.mlir  uniform_multi_db_aggregate_interleaves_large_payload.mlir
lib/carts/dialect/arts-rt/test/lowering/: arts_rt_to_llvm_lowers_affine_runtime_stride.mlir  (+7 more)
lib/carts/dialect/arts/Analysis/: AccessPatternAnalysis.cpp  AnalysisManager.cpp  README.md  StringAnalysis.cpp
lib/carts/dialect/arts/Conversion/: CMakeLists.txt  README.md
lib/carts/dialect/arts/IR/: CLAUDE.md  Dialect.cpp  README.md
lib/carts/dialect/arts/Transforms/: CMakeLists.txt  DeadCodeElimination.cpp  DistributedLaunchConsistency.cpp  PartialReductionSplitMaterialization.cpp  README.md
lib/carts/dialect/arts/Utils/: CMakeLists.txt  DbLayoutPlanUtils.cpp  DbUtils.cpp  EdtUtils.cpp  IdRegistry.cpp  LocationMetadata.cpp  LoopInvarianceUtils.cpp  LoopStructureUtils.cpp  LoweringContractUtils.cpp  README.md  RuntimeConfig.cpp  ValueAnalysisUtils.cpp
lib/carts/dialect/arts/Verify/: README.md
lib/carts/dialect/arts/test/: db_acquire_offsets_only_segments_multi_entry.mlir  db_alloc_ranked_handle_users_and_count_lowering.mlir  db_mode_tightening_marks_read_only_alloc_db_mode.mlir  db_mode_tightening_preserves_write_output_modes.mlir  distributed_launch_consistency_localizes_rejected_db.mlir  edt_explicit_params_reject_capture.mlir  edt_explicit_params_reject_direct_param_capture.mlir  edt_rejects_implicit_scalar_capture.mlir  partial_reduction_split_materialization_local_only_deps.mlir  partial_reduction_split_materialization_multinode_routes.mlir  partial_reduction_split_materialization_rejects_unmatched_shape.mlir  sde-to-codir-to-arts-codelet.mlir  small_readonly_coarse_dep_prefers_duplicate.mlir  verify-arts-objects-only-allows-small-readonly-coarse-db.mlir  verify-arts-objects-only-rejects-internode-coarse-planned-db.mlir  verify-arts-objects-only.mlir
lib/carts/dialect/codir/: CMakeLists.txt  README.md
lib/carts/dialect/codir/Analysis/: README.md
lib/carts/dialect/codir/Conversion/: CMakeLists.txt  ConversionUtils.h  README.md
lib/carts/dialect/codir/IR/: CMakeLists.txt  CodirDialect.cpp  CodirOps.cpp  README.md
lib/carts/dialect/codir/Transforms/: CMakeLists.txt  CodirBoundaryPlaceholders.cpp  CodirCodeletOpt.cpp  README.md  ReductionPlanning.cpp  StoragePlanning.cpp  VerifyCodir.cpp
lib/carts/dialect/codir/Utils/: CMakeLists.txt  CodeletABIUtils.cpp  README.md
lib/carts/dialect/codir/Verify/: README.md
lib/carts/dialect/sde/: CMakeLists.txt  README.md
lib/carts/dialect/sde/Analysis/: AffineAccessUtils.cpp  README.md  StructuredOpAnalysis.cpp
lib/carts/dialect/sde/Conversion/: README.md
lib/carts/dialect/sde/IR/: CMakeLists.txt  README.md  SdeDialect.cpp  SdeOps.cpp
lib/carts/dialect/sde/Transforms/: CMakeLists.txt  README.md
lib/carts/dialect/sde/Utils/: CMakeLists.txt  IterationSizingUtils.cpp  README.md
lib/carts/dialect/sde/Verify/: README.md  VerifySdeCpsPlan.cpp  VerifySdeLowered.cpp
lib/carts/passes/: CMakeLists.txt  README.md  Umbrella.cpp
lib/carts/utils/: CMakeLists.txt  DbUtils.cpp  DeadIrCleanup.cpp  EdtUtils.cpp  IdRegistry.cpp  LocationMetadata.cpp  LoopInvarianceUtils.cpp  LoopUtils.cpp  LoweringContractUtils.cpp  PassInstrumentation.cpp  RemovalUtils.cpp  RuntimeConfig.cpp  Utils.cpp  ValueAnalysis.cpp
lib/carts/utils/benchmarks/: CMakeLists.txt  CartsBenchmarks.cpp
lib/carts/utils/machine/: RuntimeConfig.cpp
lib/carts/utils/testing/: CMakeLists.txt
(+1071 files in other folders)
