add_subdirectory(arts-rt)
add_subdirectory(codir)
add_subdirectory(sde)

set(CARTS_RT_TO_LLVM_SOURCE_FILES ${CARTS_RT_TO_LLVM_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_RT_TRANSFORMS_SOURCE_FILES ${CARTS_RT_TRANSFORMS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_ARTS_RT_UTILS_SOURCE_FILES ${CARTS_ARTS_RT_UTILS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_ANALYSIS_SOURCE_FILES ${CARTS_SDE_ANALYSIS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_CONVERSION_SOURCE_FILES ${CARTS_SDE_CONVERSION_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_TRANSFORMS_SOURCE_FILES ${CARTS_SDE_TRANSFORMS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_VERIFY_SOURCE_FILES ${CARTS_SDE_VERIFY_SOURCE_FILES} PARENT_SCOPE)
