add_subdirectory(PolygeistToSde)

file(GLOB CARTS_SDE_OMP_TO_SDE_SOURCE_FILES CONFIGURE_DEPENDS "OmpToSde/*.cpp")
set(CARTS_SDE_CONVERSION_SOURCE_FILES
  ${CARTS_SDE_OMP_TO_SDE_SOURCE_FILES}
  ${CARTS_SDE_POLYGEIST_TO_SDE_SOURCE_FILES}
)
set(CARTS_SDE_CONVERSION_SOURCE_FILES ${CARTS_SDE_CONVERSION_SOURCE_FILES} PARENT_SCOPE)
