add_subdirectory(ArtsToLLVM)
add_subdirectory(ArtsToRt)
add_subdirectory(RtToLLVM)

set(CARTS_RT_TO_LLVM_SOURCE_FILES
  ${CARTS_ARTS_RT_ARTS_TO_LLVM_SOURCE_FILES}
  ${CARTS_ARTS_RT_ARTS_TO_RT_SOURCE_FILES}
  ${CARTS_ARTS_RT_RT_TO_LLVM_SOURCE_FILES}
)
set(CARTS_RT_TO_LLVM_SOURCE_FILES ${CARTS_RT_TO_LLVM_SOURCE_FILES} PARENT_SCOPE)
